welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: too many arguments for method estFaceMur: ()Boolean
else(estFaceMur){gauche();avance();avance();gauche();avance();}
                ^